--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "react-dom": "^0.14.1",
     "react-google-maps": "^4.11.0",
     "react-helmet": "^2.2.0",
+    "react-icons": "^2.2.1",
     "react-inline-css": "^2.0.0",
     "react-redux": "^4.0.0",
     "react-router": "2.4.0",
