--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "react-router": "2.4.0",
     "react-router-bootstrap": "^0.20.1",
     "react-router-redux": "^4.0.0",
+    "react-twitter-embedded-timeline": "^0.3.3",
     "react-twitter-widgets": "^0.2.4",
     "redux": "^3.0.4",
     "redux-async-connect": "^1.0.0-rc2",
